an erb view to test the module

--- a/index.erb
+++ b/index.erb
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>External template</title>
+   <title>Link Helper Test</title>
 </head>
 <body>
-<h1>Worked!</h1>
+  <nav>
+    <ul>
+      <li><a href="<%= link(:index) %>">Index</a></li>
+      <li><a href="<%= link(:about) %>">About</a></li>
+      <li><a href="<%= link(:random) %>">Random</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
